adding publish files access right to publishing curator + migration